# easy_daemon

./: Cargo.toml  Readme.md
src/: command.rs  config.rs  execution.rs  main.rs
