[package]
name = "easy_daemon"
version = "0.1.0"
authors = ["Fontlos <fontlos@fontlos.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
nix = { version = "0.29.0", features = ["fs", "process", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
